--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,20 @@
 body {
-    background-image: url("'../img/signpost.jpg");
+    background-image: url('../img/signpost.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    backdrop-filter: blur(5px);
+}
+
+.login-app-contents {
+	max-width: 750px;
+	margin: min(20vh, 300px) auto 0;
+	background: rgba(255, 255, 255, 0.5);
+}
+
+.margenes-elementos-login{
+    margin: 10px
+}
+
+.label-style {
+    font-weight: bold;
 }
