Creado formulario de Registro de usuario

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
                     <input id="password" type="password" class="form-control" name="password" autofocus />
                     <p class="text-right mt-4 mb-0 ">
                         <button type="submit" class="btn btn-primary margenes-elementos">Iniciar sesión</button>
-                        <button class="btn btn-link margenes-elementos" th:href="@{/registro}">Registrase</button>
+                        <a class="btn btn-link margenes-elementos" th:href="@{/registro}">Registrarse</a>
                     </p>
                 </div>
             </div>
@@ -44,7 +44,7 @@
 </div>
 
 
-<!-- Dependneicas de Bootstrap -->
+<!-- Dependencias de Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
