--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -17,9 +17,9 @@
         <h1 class="mb-4" align="center" style="font-size: 50px;">Crear nuevo usuario</h1>
         <form th:action="@{registro}" th:object="${usuarioAplicacion}" method="post" class="mt-4">
           <div class="form-group row margenes-elementos">
-            <label for="usuario" class="col-form-label col-sm-4 label-style">Nombre de usuario</label>
+            <label for="nombreUsuario" class="col-form-label col-sm-4 label-style">Nombre de usuario</label>
             <div class="col-sm-8">
-              <input id="usuario" type="text" class="form-control" name="usuario"/>
+              <input id="nombreUsuario" type="text" class="form-control" name="nombreUsuario"/>
             </div>
           </div>
           <div class="form-group row margenes-elementos">
@@ -41,12 +41,11 @@
             </div>
           </div>
           <div class="form-group row margenes-elementos">
-            <label for="country" class="col-form-label col-sm-4 label-style">Pais</label>
+            <label for="codigoPais" class="col-form-label col-sm-4 label-style">Pais</label>
             <div class="col-sm-8">
-              <select class="form-control country-dropdown" id="country" name="country">
-                <option value="">Selecciona un país</option>
+              <select class="form-control country-dropdown" id="codigoPais" name="codigoPais">
+                <option>Selecciona un país</option>
               </select>
-              <input type="hidden" th:field="*{codigoPais}" />
               <span></span>
             </div>
           </div>
