Creadas restriciones y validaciones a la hora de crear nuevos usuarios

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,11 +15,25 @@
         <div th:if="${param.error}">
             <div class="alert alert-danger">
                 Usuario o contraseña incorrectos.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
         </div>
         <div th:if="${param.logout}">
             <div class="alert alert-success">
                 Sesión cerrada correctamente.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+        <div th:if="${param.registered}">
+            <div class="alert alert-success">
+                Usuario registrado correctamente.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
         </div>
         <form th:action="@{login}" method="post" class="mt-4">
